login align fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -282,6 +282,7 @@ header {
     border: 1px solid #c7c7c7;
     padding: 10px;
     position: absolute;
+    text-align: center;
     top: 20%;
     left: 0;
     right: 0;
